# fireshire

./: .gitignore  CLAUDE.md  LICENSE  PLANNING.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_allclear_tables.py  002_plant_entries.py
backend/app/: config.py  database.py  main.py
backend/app/crud/: plant_entries.py
backend/app/models/: __init__.py  allclear.py  plant_entry.py
backend/app/prompts/: chat_system.md
backend/app/routers/: allclear.py  buildings.py  chat.py  parcels.py  plant_entries.py  plants.py
backend/app/routers/schemas/: plant_entry.py
backend/app/services/: address_normalizer.py  address_search.py  chat_client.py  gis_client.py  plants_client.py
backend/data/: ashland_hoa_master.csv
backend/scripts/: seed_parcels.py
backend/tests/: conftest.py  test_address_normalizer.py  test_address_search.py  test_allclear_parcels_resolve.py  test_buildings.py  test_chat.py  test_gis_client.py  test_parcels.py  test_plant_entry_crud.py  test_plant_entry_router.py  test_plants.py
docs/: presentation.html  presentation.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  routeTree.gen.ts  test-setup.ts
scripts/: dev.sh  validate.sh
user-stories/: _template.md  index.html  place-plants-on-map.md
user-stories/backlog/: 01-gis-service-client.md  06-address-search-integration.md  07-zone-overlay-rendering.md  08-zone-legend-polish.md  pin-plants.md  (+7 more)
(+84 files in other folders)
